syntax = "proto3";
package samples;

message Proto3Optional {
  string query = 1;
  optional int32 page_number = 2;
  optional int32 result_per_page = 3;
}
